# microByte_firmware

./: .Makefile.swp  CMakeLists.txt  Error.txt  MicroGUI.sh  Readme.md  list.txt  partitions.csv  sdkconfig
components/: lv_conf.h~
components/GBC/: CMakeLists.txt
components/GUI/: CMakeLists.txt  GUI.c  GUI_frontend.c  component.mk  lv_conf.h
components/GUI/LVGL/: component.mk
components/GUI/icons/: GG_icon.h  emulators_icon.h  ext_application_icon.h  gameboy_icon.h  gameboycolor_icon.h  gamepad.h  nes_icon.h  nogame_icon.h  sega_icon.h  settings_icon.h  snes_icon.h
components/LED/: CMakeLists.txt
components/NES/: CMakeLists.txt
components/NES/nofrendo/: bitmap.c  component.mk  memguard.c
components/OTA/: CMakeLists.txt  update_firmware.c
components/SMS/: CMakeLists.txt
components/SMS/smsplus/: config.h  fileio.c  fmintf.h  hvc.h  loadrom.h  sms.h  sound.h  state.c  state.h  system.h  vdp.c  ym2413.c
components/SMS/smsplus/cpu/: cpuintrf.h  osd_cpu.h
components/ST7789/: CMakeLists.txt  ST7789_driver.c  ST7789_driver.h
components/TCA9555/: CMakeLists.txt
components/backlight_ctrl/: CMakeLists.txt
components/battery/: CMakeLists.txt  battery.c
components/boot_screen/: CMakeLists.txt
components/display_HAL/: CMakeLists.txt  display_HAL.h
components/drivers/display/backlight_ctrl/: backlight_ctrl.c
components/drivers/sd_storage/: sd_storage.c
components/drivers/user_input/TCA9555/: TCA9555.c
components/emulators/GBC/: component.mk  gnuboy_manager.c
components/emulators/NES/: osd.c
components/emulators/NES/nofrendo/: noftypes.h
components/emulators/SMS/smsplus/: 2413tone.h  config.c  emu2413.c  emu2413.h  error.c  loadrom.c  memz80.c  pio.c  pio.h  render.c  render.h  shared.h  sms.c  (+4 more)
components/font_render/: CMakeLists.txt
components/lvgl/: CMakeLists.txt
components/sd_storage/: CMakeLists.txt
components/sound/: CMakeLists.txt
components/system_configuration/: CMakeLists.txt
components/user_input/: CMakeLists.txt
main/: CMakeLists.txt  main.c
(+2 files in other folders)
